# wav2chat

./: .gitignore  LICENSE  Makefile  README-zh.md  README.md  __init__.py  app_settings.py  audio.py  audio_playback.py  cli.py  dialog_utils.py  errors.py  filename_meta.py  fs_browser.py  funasr_backend.py  gui.py  gui_wx.py  i18n.py  jieba_cache.py  jsonfix.py  models.py  phone_import.py  phone_import_dialog.py  pipeline.py  pyproject.toml  render.py  settings_dialog.py  speaker_ui.py  ui_fonts.py  version_info.py
completions/: wav2chat
doc/: generate_demo_ppt.py  phone-support-zh.md  phone-support.md  wav2chat.1
gui/: __init__.py  browser_mixin.py  constants.py  conversion_mixin.py  dialog_utils.py  entry_helpers.py  entry_store_mixin.py  frame.py  log_handler.py  main.py  models.py  phone_import_dialog.py  settings_dialog.py  speaker_ui.py  status_icons.py  ui_queue_mixin.py
gui/widgets/: __init__.py  bubble_chat_view.py  chat_message.py  chat_segment.py  chat_view.py  common.py  dir_tree.py  drop_target.py  import_dialog.py  list_chat_view.py  path_breadcrumb.py  recording_list.py  transcript_chat_view.py
packager/: _entry.py  common.sh  constraints-debian-system.txt  constraints-packager.txt  cythonize_setup.py  fetch-wheels.sh  linux.sh  macos.sh  obfuscate_setup.py  wav2chat.spec  windows.sh
