[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wav2chat"
version = "0.1.0"
description = "Convert phone/meeting audio into speaker-segmented chat transcripts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lenik", email = "wav2chat@bodz.net" }]
keywords = ["asr", "funasr", "speaker-diarization", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "funasr>=1.0.0",
    "modelscope>=1.9.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # Numba (pulled in by funasr) needs coverage.types.Tracer (>=7.6.1); Debian
    # system-site-packages venvs often ship coverage 7.6.0, which breaks import.
    "coverage>=7.6.1",
]

# GUI uses wxPython via the system package on Linux (no pip wheels).
# Debian/Ubuntu: sudo apt install python3-wxgtk4.0
# Use a venv with: python3 -m venv --system-site-packages .venv

[project.scripts]
wav2chat = "wav2chat.cli:main"
jsonfix = "wav2chat.jsonfix:main"

[tool.setuptools]
package-dir = { wav2chat = "." }
packages = ["wav2chat"]
